--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:integration": "vitest run --config vitest.config.integration.ts",
     "test": "npm run test:integration && npm run test:unit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "npm run lint -- --fix",
     "prettify": "prettier \"./**/*.{js,jsx,json,css,ts,tsx}\" --write"
   },
   "repository": {
